Adjusted API request, added parsing for the response payload, adjusted landing page content

--- a/app.html
+++ b/app.html
@@ -38,7 +38,9 @@
 		<div class="project-description-wrapper">
 			<div class="content-wrapper">
 				<h2>About the project</h2>
-				<p>What, why, and how...</p>
+				<p>This Web app is part of an artifact.
+				The data comes from a moisture sensor linked to an Arduino MKR Fox 1200. The data is transmitted over the SigFox Network.
+				This web app retrieves the latest data from the SigFox network via API.</p>
 			</div>
 		</div>
 
